--- a/rodrigo.html
+++ b/rodrigo.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Noteserv Infor</title>
+    <title>Noteserv Informática 2</title>
     <style>
         body {
             background-color: #b4c1e7a2
