organiização de menus

--- a/rodrigo.html
+++ b/rodrigo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br"> 
 
 <head>
     <meta charset="UTF-8">
@@ -35,7 +35,8 @@
                 <h1>Noteserv Informática</h1>
                 <h2>Assistência Técnica em Tecnologia da Informação</h2>
             </hgroup>
-            <img src="_imagens/baner programa 2.jpg"> Menu Principal - Home - Serviços - Fotos - Nossos clientes - Fale conosco
+            <img src="_imagens/baner programa 2.jpg"> 
+ Menu Principal - Home - Serviços - Fotos - Nossos clientes - Fale conosco
         </header>
     </div>
 </body>
