--- a/rodrigo.html
+++ b/rodrigo.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-br"> 
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Noteserv Informática 2</title>
+    <title>Noteserv Infor</title>
     <style>
         body {
             background-color: #b4c1e7a2
@@ -35,8 +35,7 @@
                 <h1>Noteserv Informática</h1>
                 <h2>Assistência Técnica em Tecnologia da Informação</h2>
             </hgroup>
-            <img src="_imagens/baner programa 2.jpg"> 
- Menu Principal - Home - Serviços - Fotos - Nossos clientes - Fale conosco
+            <img src="_imagens/baner programa 2.jpg"> Menu Principal - Home - Serviços - Fotos - Nossos clientes - Fale conosco
         </header>
     </div>
 </body>
