--- a/rodrigo.html
+++ b/rodrigo.html
@@ -15,15 +15,20 @@
 
             font-family: Arial, Helvetica, sans-serif;
             color: blue;
-            font-size: 50pt;
+            font-size: 40pt;
             text-shadow: 2px 2px 2px black
         }
 
         h2 {
             font-family: Arial, Helvetica, sans-serif;
             color: blue;
-            font-size: 30pt;
+            font-size: 20pt;
             text-shadow: 2px 2px 2px black
+        }
+
+        H3 {
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 15pt;
         }
     </style>
 </head>
@@ -36,6 +41,24 @@
                 <h2>Assistência Técnica em Tecnologia da Informação</h2>
             </hgroup>
             <img src="_imagens/baner programa 2.jpg"> Menu Principal - Home - Serviços - Fotos - Nossos clientes - Fale conosco
+            <h3>
+                <p>Noteserv Informática é uma empresa que trabalha desde 2014 com prestação de serviços empresarial e residencial
+                    na áre de assistência técnica em informática.</p>
+
+                <P>Trazemos soluções diversas para sua empresa como por exemplo manutenção de computadores, notebooks, instalação
+                    de software e hardware, criação de sites e administração das suas redes sociais, visando a prospecçãode
+                    clientes com facilidades de acesso ao público através de técnicas SEO.</P>
+
+
+                <P>Manutenção de notebooks e desktops, isntalação de sistemas.</P>
+
+                <P>Criação de websites e páginas em redes sociais.</P>
+
+                <P>Atendimento a domicílio para empresas e usuários mais leigos</P>
+
+
+                <P>Endereço: Rua José Lourenço, 777 centro Luís Correia- PIAUÍ CEP: 64220-000 Contatos: (86) 99406-1540</P>
+            </h3>
         </header>
     </div>
 </body>
