--- a/rodrigo.html
+++ b/rodrigo.html
@@ -27,7 +27,7 @@
         }
 
         H3 {
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
             font-size: 15pt;
         }
     </style>
@@ -40,7 +40,8 @@
                 <h1>Noteserv Informática</h1>
                 <h2>Assistência Técnica em Tecnologia da Informação</h2>
             </hgroup>
-            <img src="_imagens/baner programa 2.jpg"> Menu Principal - Home - Serviços - Fotos - Nossos clientes - Fale conosco
+            <img src="_imagens/banner_assistencia-tecnica.jpg"> 
+            Menu Principal - Home - Serviços - Fotos - Nossos clientes - Fale conosco
             <h3>
                 <p>Noteserv Informática é uma empresa que trabalha desde 2014 com prestação de serviços empresarial e residencial
                     na áre de assistência técnica em informática.</p>
