--- a/rodrigo.html
+++ b/rodrigo.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Noteserv Infor</title>
+
     <style>
         body {
             background-color: #b4c1e7a2
@@ -27,8 +28,7 @@
         }
 
         H3 {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
-            font-size: 15pt;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif font-size: 15pt;
         }
     </style>
 </head>
@@ -41,7 +41,7 @@
                 <h2>Assistência Técnica em Tecnologia da Informação</h2>
             </hgroup>
             <img src="_imagens/banner_assistencia-tecnica.jpg"> 
-            Menu Principal - Home - Serviços - Fotos - Nossos clientes - Fale conosco
+            <menu>Home - Serviços - Fotos - Nossos - clientes - Fale conosco</menu>
             <h3>
                 <p>Noteserv Informática é uma empresa que trabalha desde 2014 com prestação de serviços empresarial e residencial
                     na áre de assistência técnica em informática.</p>
@@ -57,8 +57,12 @@
 
                 <P>Atendimento a domicílio para empresas e usuários mais leigos</P>
 
+                <nav>
 
-                <P>Endereço: Rua José Lourenço, 777 centro Luís Correia- PIAUÍ CEP: 64220-000 Contatos: (86) 99406-1540</P>
+                    <a href="https://www.facebook.com/noteservinfor/"><button> Click aqui para visitar nossa página no Facebook</button></a>
+                </nav>
+
+                <P>Endereço: Rua José Lourenço, 777 centro Luís Correia- PIAUÍ CEP: 64220-000 Contatos: (86) 99406-1540<time>hora</time></P>
             </h3>
         </header>
     </div>
