--- a/rodrigo.html
+++ b/rodrigo.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Noteserv Infor</title>
+    <link rel="icon" href="_imagens/barra.jpg" }>
 
     <style>
         body {
@@ -30,6 +31,12 @@
         H3 {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif font-size: 15pt;
         }
+
+        footer {
+            background-color: rgb(34, 13, 219);
+            color: white;
+            text-shadow: 2px 2px 2px black
+        }
     </style>
 </head>
 
@@ -40,7 +47,7 @@
                 <h1>Noteserv Informática</h1>
                 <h2>Assistência Técnica em Tecnologia da Informação</h2>
             </hgroup>
-            <img src="_imagens/banner_assistencia-tecnica.jpg"> 
+            <img src="_imagens/banner_assistencia-tecnica.jpg">
             <menu>Home - Serviços - Fotos - Nossos - clientes - Fale conosco</menu>
             <h3>
                 <p>Noteserv Informática é uma empresa que trabalha desde 2014 com prestação de serviços empresarial e residencial
@@ -50,19 +57,29 @@
                     de software e hardware, criação de sites e administração das suas redes sociais, visando a prospecçãode
                     clientes com facilidades de acesso ao público através de técnicas SEO.</P>
 
-
+<img src="_imagens/info-668x291.jpg">
                 <P>Manutenção de notebooks e desktops, isntalação de sistemas.</P>
+                <img src="_imagens/Untitled-11.jpg">
 
                 <P>Criação de websites e páginas em redes sociais.</P>
-
+                <img src="_imagens/banner_contato.jpg">
                 <P>Atendimento a domicílio para empresas e usuários mais leigos</P>
 
                 <nav>
 
-                    <a href="https://www.facebook.com/noteservinfor/"><button> Click aqui para visitar nossa página no Facebook</button></a>
+                    <a href="https://www.facebook.com/noteservinfor/">
+                        <button> Click aqui para visitar nossa página no Facebook</button>
+                    </a>
                 </nav>
 
-                <P>Endereço: Rua José Lourenço, 777 centro Luís Correia- PIAUÍ CEP: 64220-000 Contatos: (86) 99406-1540<time>hora</time></P>
+                <footer>
+                    <P>Endereço: Rua José Lourenço, 777 centro Luís Correia- PIAUÍ
+                        <br> CEP: 64220-000
+                        <br> Contatos: (86) 99406-1540
+                        <time>hora</time>
+                    </P>
+
+                </footer>
             </h3>
         </header>
     </div>
