--- a/rodrigo.html
+++ b/rodrigo.html
@@ -7,37 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Noteserv Infor</title>
     <link rel="icon" href="_imagens/barra.jpg" }>
-
-    <style>
-        body {
-            background-color: #b4c1e7a2
-        }
-
-        h1 {
-
-            font-family: Arial, Helvetica, sans-serif;
-            color: blue;
-            font-size: 40pt;
-            text-shadow: 2px 2px 2px black
-        }
-
-        h2 {
-            font-family: Arial, Helvetica, sans-serif;
-            color: blue;
-            font-size: 20pt;
-            text-shadow: 2px 2px 2px black
-        }
-
-        H3 {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif font-size: 15pt;
-        }
-
-        footer {
-            background-color: rgb(34, 13, 219);
-            color: white;
-            text-shadow: 2px 2px 2px black
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 
 <body>
@@ -47,7 +18,14 @@
                 <h1>Noteserv Informática</h1>
                 <h2>Assistência Técnica em Tecnologia da Informação</h2>
             </hgroup>
-            <img src="_imagens/banner_assistencia-tecnica.jpg">
+            <img src="_imagens/banner_assistencia-tecnica.jpg" ;>
+            <!-- Menu de navegacao do site -->
+            <ul class="navbar">
+                <li><a href="rodrigo.html">Home page</a>
+                    <li><a href="rodrigo.html">Serviços</a>
+                        <li><a href="rodrigo.html">Clientes</a>
+                            <li><a href="index.html">Contato</a>
+            </ul>
             <menu>Home - Serviços - Fotos - Nossos - clientes - Fale conosco</menu>
             <h3>
                 <p>Noteserv Informática é uma empresa que trabalha desde 2014 com prestação de serviços empresarial e residencial
@@ -57,7 +35,7 @@
                     de software e hardware, criação de sites e administração das suas redes sociais, visando a prospecçãode
                     clientes com facilidades de acesso ao público através de técnicas SEO.</P>
 
-<img src="_imagens/info-668x291.jpg">
+                <img src="_imagens/info-668x291.jpg">
                 <P>Manutenção de notebooks e desktops, isntalação de sistemas.</P>
                 <img src="_imagens/Untitled-11.jpg">
 
